--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
     "hbs": "^4.2.0",
     "helmet": "^8.1.0",
@@ -32,6 +33,7 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "openai": "^5.23.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
