--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.6",
     "openai": "^5.23.1",
+    "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
