--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
+    "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "hbs": "^4.2.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
